# DirectionalTSDF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  environment.yml
Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  InfiniTAM_cli.cpp
Apps/InputSource/: CMakeLists.txt  FFMPEGReader.cpp  FFMPEGWriter.cpp  FFMPEGWriter.h  IMUSourceEngine.cpp  IMUSourceEngine.h  ImageSourceEngine.cpp  ImageSourceEngine.h  Kinect2Engine.cpp  OpenNIEngine.cpp  PointCloudSourceEngine.cpp  PointCloudSourceEngine.h  RealSense2Engine.cpp  RealSense2Engine.h  RealSenseEngine.cpp  TrajectorySourceEngine.cpp  TrajectorySourceEngine.h
FernRelocLib/: CMakeLists.txt
FernRelocLib/include/FernRelocLib/: PoseDatabase.h  Relocaliser.h
ITMLib/: CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  ITMLibDefines.h
ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.tpp  ITMConstants.h  ITMDenseMapper.h  ITMDenseMapper.tpp  ITMMainEngine.h  ITMMultiEngine.tpp  ITMTrackingController.h
ITMLib/Engines/Logging/: ITMLoggingEngine.cpp  ITMLoggingEngine.h
ITMLib/Engines/LowLevel/: ITMLowLevelEngineFactory.cpp  ITMLowLevelEngineFactory.h
ITMLib/Engines/LowLevel/CPU/: ITMLowLevelEngine_CPU.cpp  (+1 more)
ITMLib/Engines/Meshing/: ITMMeshingEngineFactory.h  ITMMultiMeshingEngineFactory.h
ITMLib/Engines/MultiScene/: ITMMapGraphManager.h  ITMMapGraphManager.tpp
ITMLib/Engines/Reconstruction/: ITMSceneReconstructionEngineFactory.h
ITMLib/Engines/Swapping/: ITMSwappingEngineFactory.h
ITMLib/Engines/ViewBuilding/: ITMViewBuilderFactory.cpp  ITMViewBuilderFactory.h
ITMLib/Engines/Visualisation/: ITMVisualisationEngineFactory.h
ITMLib/Objects/Camera/: ITMCalibIO.cpp  ITMCalibIO.h  ITMIntrinsics.h
ITMLib/Objects/Meshing/: ITMMesh.h
ITMLib/Objects/Misc/: ITMIMUCalibrator.h  ITMIMUMeasurement.h  ITMPointCloud.h
ITMLib/Objects/RenderStates/: ITMRenderState.h  ITMRenderStateFactory.h  ITMRenderState_VH.h
ITMLib/Objects/Scene/: ITMDirectional.h  ITMLocalMap.h  ITMLocalVBA.h  ITMMultiSceneAccess.h  ITMRepresentationAccess.h  ITMScene.cu  ITMScene.h  ITMVoxelBlockHash.h  ITMVoxelTypes.h  TSDF.h  TSDF_CPU.h  TSDF_CUDA.h
ITMLib/Objects/Stats/: ITMPreprocessingTimeStats.h  ITMReconstructionTimeStats.h  ITMRelocalizationTimeStats.h  ITMRenderError.h  ITMTimeStatsBase.h  ITMTrackingTimeStats.h
ITMLib/Objects/Tracking/: ITMDepthHierarchyLevel.h  ITMHierarchyLevel.h  ITMImageHierarchy.h  ITMIntensityHierarchyLevel.h  ITMRGBHierarchyLevel.h  ITMSceneHierarchyLevel.h  ITMTemplatedHierarchyLevel.h  ITMTrackingState.h  ITMViewHierarchyLevel.h  TrackerIterationType.h
ITMLib/Objects/Views/: ITMView.h  ITMViewIMU.h
ITMLib/Trackers/: ITMTrackerFactory.h
ITMLib/Trackers/CPU/: ITMColorTracker_CPU.cpp  ITMColorTracker_CPU.h  ITMExtendedTracker_CPU.cpp  ITMExtendedTracker_CPU.h  ITMICPTracker_CPU.h
ITMLib/Trackers/CUDA/: ITMColorTracker_CUDA.h  ITMExtendedTracker_CUDA.cu  ITMExtendedTracker_CUDA.h  ITMICPTracker_CUDA.cu  ITMICPTracker_CUDA.h
ITMLib/Trackers/Interface/: ITMColorTracker.cpp  ITMColorTracker.h  ITMCompositeTracker.h  ITMExtendedTracker.cpp  ITMExtendedTracker.h  ITMFileBasedTracker.cpp  ITMFileBasedTracker.h  ITMForceFailTracker.cpp  ITMForceFailTracker.h  ITMICPTracker.cpp  ITMICPTracker.h  ITMIMUTracker.cpp  ITMIMUTracker.h  ITMTracker.h
ITMLib/Trackers/Shared/: ITMExtendedTracker_Shared.h  ITMICPTracker_Shared.h  ITMTracker_Shared.h
ITMLib/Utils/: ITMCUDAUtils.h  ITMFilter.h  ITMFusionParams.h  ITMGeometry.h  ITMImageTypes.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h  ITMPixelUtils.h  ITMProjectionUtils.h  ITMTimer.h  TemplateUtils.h
ITMLib/include/ITMLib/: ITMLib.h  ITMLibDefines.h
ITMLib/src/: CUDAInstantiations.cu
ITMLib/src/Core/: ITMBasicEngine.cpp  ITMDenseMapper.cpp  ITMTrackingController.cpp
ITMLib/src/Objects/: ITMCalibIO.cpp  ITMScene.cu  TSDF_CPU.h  TSDF_CUDA.h
ITMLib/src/Trackers/: ITMColorTracker.cpp  ITMExtendedTracker.cpp  ITMFileBasedTracker.cpp  ITMForceFailTracker.cpp  ITMICPTracker.cpp  ITMIMUTracker.cpp  ITMTrackerFactory.cpp
ITMLib/src/Utils/: ITMBlockTraversal.h  ITMCUDAUtils.h  ITMFilter.h  ITMLibSettings.cpp  ITMPixelUtils.h
ITMLib/test/: CMakeLists.txt  test_block_traversal.cpp
InfiniTAM/: CMakeLists.txt
InfiniTAM/Apps/: CMakeLists.txt
InfiniTAM/Apps/AppEngine/: AppEngine.h
InfiniTAM/Apps/InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp  UIEngine.cpp  UIEngine.h
InfiniTAM/Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  InfiniTAM_cli.cpp
InfiniTAM/Apps/Utils/: CLIUtils.h  ImageSourceUtils.h
InfiniTAM/Files/: CORBS.txt  CORBS_raw.txt  ICL.txt  KinectV2_high_res.txt  TUM1.txt  d415.txt  settings.yaml
InfiniTAM/ITMLib/: CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  ITMLibDefines.h
InfiniTAM/ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.h  ITMBasicSurfelEngine.tpp  ITMConstants.h  ITMDenseMapper.h  ITMDenseMapper.tpp  ITMMainEngine.h  ITMMultiEngine.h  ITMMultiEngine.tpp  ITMTrackingController.h
InfiniTAM/ITMLib/Trackers/: ITMTrackerFactory.h
InfiniTAM/ITMLib/Utils/: ITMCUDAUtils.h  ITMFilter.h  ITMFusionParams.h  ITMGeometry.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h  ITMPixelUtils.h  ITMProjectionUtils.h  ITMSceneParams.h  ITMStringUtils.h
InfiniTAM/InputSource/: CMakeLists.txt  OpenNIEngine.cpp  RealSense2Engine.cpp  TrajectorySourceEngine.cpp
InfiniTAM/ORUtils/: CMakeLists.txt  CUDADefines.h  FileUtils.cpp  FileUtils.h  HomkerMap.h  Image.h  Matrix.h  SE3Pose.cpp  SE3Pose.h  Vector.h
InfiniTAM/cmake/: FindOpenNI.cmake  FindRealSense2.cmake  LinkOpenNI.cmake  UseCUDA.cmake
InfiniTAM/test/: CMakeLists.txt  stdgpu_benchmark.cu  test_block_traversal.cpp  test_tsdf.cu
ORUtils/: CMakeLists.txt  FileUtils.cpp  MemoryBlock.h  MemoryBlockPersister.h  SVMClassifier.h
ORUtils/include/ORUtils/: EigenConversion.h  FileUtils.h  Image.h  MathUtils.h  Matrix.h  MemoryBlock.h  MemoryBlockPersister.h  PlatformIndependence.h  SE3Pose.h  SVMClassifier.h  Vector.h
ORUtils/src/: FileUtils.cpp  KeyValueConfig.cpp  SE3Pose.cpp
(+293 files in other folders)
